# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: lint.yml
.ruff_cache/: .gitignore
.ruff_cache/0.15.4/: 1208835861312489071
hexlet_code/: .env
hexlet_code/page_analyzer/: app.py  urls.py
hexlet_code/page_analyzer/templates/: base.html  index.html  layout.html  url.html  urls.html
page_analyzer/: app.py  database.py  parser.py  url_normalizer.py  urls.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
