[project]
name = "hexlet-code"
version = "0.0.1"
dependencies = [
  "flask",
  "gunicorn",
  "python-dotenv",
  "psycopg[binary]>=3.1.0",
  "validators>=0.22.0", 
  "requests>=2.31.0",
  "beautifulsoup4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
target-version = 'py39'

[tool.hatch.build.targets.wheel]
packages = ["hexlet_code"]
